--- a/toy/config/abc.json.sample
+++ b/toy/config/abc.json.sample
@@ -2,6 +2,7 @@
     "name": "task",
     "url": "url",
     "task": [{"module": "listdir",
-              "require": {"url": ["modname"]}}
+              "require": {"url": ["modname"]},
+              "params": None}
   ]
 }
